homepage svg animation

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="assets/js/lottie.min.js"></script>
   <script src="assets/js/animation.js"></script>
 </body>
 </html>
