--- a/src/index.html
+++ b/src/index.html
@@ -27,5 +27,6 @@
   <app-root></app-root>
   <script src="assets/js/lottie.min.js"></script>
   <script src="assets/js/animation.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/hammerjs/2.0.8/hammer.min.js"></script>
 </body>
 </html>
