--- a/src/assets/worker/worker.html
+++ b/src/assets/worker/worker.html
@@ -4,23 +4,18 @@
   
   <body>
     <pre><code class="html">
-        <mat-checkbox checked=true></mat-checkbox>
-        <mat-checkbox [indeterminate]=true></mat-checkbox>
-        <mat-checkbox></mat-checkbox>
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </code></pre>
     <pre><code class="css"></code></pre>
     <pre><code class="typescript">
-        import { Component } from '@angular/core';
-        @Component({
-          selector: 'app-checkbox-basic',
-          templateUrl: './checkbox-basic.component.html',
-          styleUrls: ['./checkbox-basic.component.scss']
+        import {BrowserAnimationsModule} from '@angular/platform-browser/animations';
+
+        @NgModule({
+          ...
+          imports: [BrowserAnimationsModule],
+          ...
         })
-        export class CheckboxBasicComponent {
-          constructor() { }
-          ngOnInit() {
-          }
-        }
+        export class AppModule { }
   </code></pre>
   </body>
   <script>
