update dialog(modal) component

--- a/src/assets/examples/dialog-basic/dialog-basic.example.ts.html
+++ b/src/assets/examples/dialog-basic/dialog-basic.example.ts.html
@@ -25,14 +25,131 @@ export class DialogBasicComponent implements OnInit {
   ngOnInit() {}
 }
 
+
+
+
+
+
+const nodeCount = node =&gt; {
+  return node.children.length;
+};
+
+const checkedNodeCount = node =&gt; {
+  let count = 0;
+  node.children.forEach(subNode =&gt; {
+    if (subNode.checked) {
+      count++;
+    }
+  });
+  return count;
+};
+
+const toggleAllChildNode = (node, status) =&gt; {
+  node.children.forEach(subNode =&gt; {
+    subNode.checked = status;
+    toggleAllChildNode(subNode, status);
+  });
+};
+
+const partialCheckedNode = node =&gt; {
+  let checkNodes = 0;
+  if (node.children.length &gt; 0) {
+    node.children.forEach(subNode =&gt; {
+      checkNodes += partialCheckedNode(subNode);
+    });
+  } else if (node.checked) {
+    checkNodes++;
+  }
+  return checkNodes;
+};
 @Component({
   selector: 'dialog-data-example-dialog',
-  template: `
-    &lt;div&gt;I am the dialog&lt;/div&gt;
-  `
+  templateUrl: 'dialog-contain.component.html',
+  styleUrls: ['dialog-contain.component.scss']
 })
 export class DialogDataExampleDialog {
   constructor(@Inject(MAT_DIALOG_DATA) public data: DialogData) {}
+  tree: any = [
+    {
+      name: 'Hospitals of the University of Pennsylvania-Penn Presbyterian',
+      isExpanded: true,
+      checked: false,
+      children: []
+    },
+    {
+      name: 'Johns Hopkins Hospitals',
+      isExpanded: true,
+      checked: false,
+      children: [
+        {
+          name: 'Facility 1',
+          isExpanded: true,
+          checked: false,
+          children: []
+        },
+        {
+          name: 'Facility 2',
+          isExpanded: true,
+          checked: false,
+          children: []
+        },
+        {
+          name: 'Facility 3',
+          isExpanded: true,
+          checked: false,
+          children: []
+        }
+      ]
+    },
+    {
+      name: 'New York-Presbyterian University Hospital of Columbia and Cornell',
+      isExpanded: true,
+      checked: false,
+      children: [
+        {
+          name: 'item3',
+          isExpanded: true,
+          checked: false,
+          children: []
+        },
+        {
+          name: 'item4',
+          isExpanded: true,
+          checked: false,
+          children: []
+        }
+      ]
+    }
+  ];
+
+  ngOnInit() {}
+
+  descendantsAllSelected(node) {
+    //if node have children, count if checked node equal to node count
+    if (node.children.length &gt; 0) {
+      let status = nodeCount(node) === checkedNodeCount(node);
+      node.checked = status;
+      return status;
+    }
+    //if node dont have children, just return the node check status
+    return node.checked;
+  }
+
+  descendantsPartiallySelected(node) {
+    if (node.children.length &gt; 0) {
+      return partialCheckedNode(node) &amp;&amp; !this.descendantsAllSelected(node);
+    }
+    return false;
+  }
+
+  toggle(node) {
+    //if node have children, toggle all children node status
+    if (node.children.length &gt; 0) {
+      toggleAllChildNode(node, !node.checked);
+    }
+    //if node dont have children, toggle itself
+    node.checked = !node.checked;
+  }
 }
 
 export const DialogBasicData = {
