Update dialog component content

--- a/src/assets/examples/dialog-basic/dialog-basic.example.ts.html
+++ b/src/assets/examples/dialog-basic/dialog-basic.example.ts.html
@@ -1,34 +1,6 @@
 import { Component, OnInit, Inject } from '@angular/core';
 
-import { MatDialog, MAT_DIALOG_DATA } from '@angular/material';
-
-export interface DialogData {
-  animal: 'panda' | 'unicorn' | 'lion';
-}
-
-@Component({
-  selector: 'dialog-basic',
-  templateUrl: 'dialog-basic.component.html',
-  styleUrls: ['dialog-basic.component.css']
-})
-export class DialogBasicComponent implements OnInit {
-  constructor(public dialog: MatDialog) {}
-
-  openDialog() {
-    this.dialog.open(DialogDataExampleDialog, {
-      data: {
-        animal: 'panda'
-      }
-    });
-  };
-
-  ngOnInit() {}
-}
-
-
-
-
-
+import { MatDialog, MAT_DIALOG_DATA, MatDialogRef } from '@angular/material';
 
 const nodeCount = node =&gt; {
   return node.children.length;
@@ -68,7 +40,10 @@ const partialCheckedNode = node =&gt; {
   styleUrls: ['dialog-contain.component.scss']
 })
 export class DialogDataExampleDialog {
-  constructor(@Inject(MAT_DIALOG_DATA) public data: DialogData) {}
+  constructor(
+    public dialogRef: MatDialogRef&lt;DialogDataExampleDialog&gt;,
+    @Inject(MAT_DIALOG_DATA) public data: DialogData
+  ) {}
   tree: any = [
     {
       name: 'Hospitals of the University of Pennsylvania-Penn Presbyterian',
@@ -122,16 +97,18 @@ export class DialogDataExampleDialog {
     }
   ];
 
-  ngOnInit() {}
+  onNoClick() {
+    this.dialogRef.close();
+  }
 
   descendantsAllSelected(node) {
-    //if node have children, count if checked node equal to node count
+    // if node have children, count if checked node equal to node count
     if (node.children.length &gt; 0) {
-      let status = nodeCount(node) === checkedNodeCount(node);
+      const status = nodeCount(node) === checkedNodeCount(node);
       node.checked = status;
       return status;
     }
-    //if node dont have children, just return the node check status
+    // if node dont have children, just return the node check status
     return node.checked;
   }
 
@@ -143,13 +120,41 @@ export class DialogDataExampleDialog {
   }
 
   toggle(node) {
-    //if node have children, toggle all children node status
+    // if node have children, toggle all children node status
     if (node.children.length &gt; 0) {
       toggleAllChildNode(node, !node.checked);
     }
-    //if node dont have children, toggle itself
+    // if node dont have children, toggle itself
     node.checked = !node.checked;
   }
+
+  selectAll(e) {
+    console.log(e.checked);
+    toggleAllChildNode({ children: this.tree }, e.checked);
+  }
+}
+export interface DialogData {
+  animal: 'panda' | 'unicorn' | 'lion';
+}
+
+@Component({
+  selector: 'dialog-basic',
+  templateUrl: 'dialog-basic.component.html',
+  styleUrls: ['dialog-basic.component.css']
+})
+export class DialogBasicComponent implements OnInit {
+  constructor(public dialog: MatDialog) {}
+
+  openDialog() {
+    this.dialog.open(DialogDataExampleDialog, {
+      width: '400px',
+      data: {
+        animal: 'panda'
+      }
+    });
+  }
+
+  ngOnInit() {}
 }
 
 export const DialogBasicData = {
